--- a/rodape.css
+++ b/rodape.css
@@ -25,14 +25,14 @@ footer .texto-rodape {
     margin-left: 80%;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     footer img{
-        width: 50%;
-        height: 30px;
+        width: 40%;
+        height: 100%;
     }
 
     footer .texto-rodape {
-        font-size: 60%;
-        margin-left: 60%;
+        font-size: 40%;
+        margin-left: 50%;
     }
 }
