--- a/rodape.css
+++ b/rodape.css
@@ -27,7 +27,7 @@ footer .texto-rodape {
 
 @media (max-width: 600px) {
     footer img{
-        width: 40%;
+        width: 40px;
         height: 100%;
     }
 
@@ -35,4 +35,10 @@ footer .texto-rodape {
         font-size: 40%;
         margin-left: 50%;
     }
+    footer li{
+        display: inline-block;
+        margin-right:2px;
+        margin-left: 2px;
+    }
+    
 }
